# Bus_Pirate

./: .gitignore  CHANGELOG.md  README.md
BPv3-bootloader/firmware-v4.5/: p24FJ64GA002.gld  settings.inc
BPv3-bootloader/pirate-loader/: pirate-loader.c
BPv4-bootloader/pirate-loader/: test.bat  test.sh
Documentation/: 1-wire.md  bitbang.md  building-and-flashing-firmware.md  dio.md  hd44780.md  i2c.md  jtag.md  pc_keyboard.md  pic_programmer.md  raw_2-wire.md  raw_3-wire.md  self-test.md  spi.md  uart.md
Documentation/art/: BP LCD v3a.tif
Firmware/: 1wire.c  1wire.h  1wire_lib.c  AUXpin.c  AUXpin.h  HD44780.c  I2C.c  OpenOCD.c  OpenOCD.h  SPI.c  SUMP.c  SUMP.h  UART.c  aux_pin.c  aux_pin.h  base.c  base.h  baseIO.c  baseIO.h  baseUI.h  base_io.c  base_io.h  basic.c  basic.h  binIO.c  binIO.h  binIOhelpers.c  binIOhelpers.h  binary_io.c  binary_io.h  binwire.c  bitbang.c  bitbang.h  busPirateCore.c  busPirateCore.h  bus_pirate_core.c  bus_pirate_core.h  configuration.h  core.c  core.h  (+55 more)
Firmware-Alternates/Blink_MODE_LED/: main.c  p24FJ64GA002.gld
Firmware-Alternates/BusPirateADCDemo/: main.c
Firmware-Alternates/BusPirateUARTDEMOTEST/: main.c
Firmware-Alternates/firmware-STK500v2/: base.h  p24FJ64GA002.gld
Firmware-Demos/ADC2UART/: main.c
Firmware/dp_usb/: cdc.c
Firmware/jtag/: lenval.c  lenval.h  micro.c  micro.h  ports.c  ports.h
firmware-STK500v2/: base.c  main.c  spi.c
scripts/: version.pl
scripts/TestFT232/: CMakeLists.txt  ft232testapp0.cpp
scripts/pyBusPirateLite/: i2c-test.py  spi_test.py
tools/packstrings/: bus_pirate_v3_strings.txt  (+3 more)
(+32 files in other folders)
